-- =========================================================
-- ENUMS
-- =========================================================

CREATE TYPE role AS ENUM (
    'participant',
    'event_admin',
    'super'
);

CREATE TYPE payment_trigger AS ENUM (
    'before_registration',
    'after_round',
    'free'
);

CREATE TYPE registration_status AS ENUM (
    'registered',
    'in_round',
    'shortlisted',
    'eliminated',
    'confirmed',
    'cancelled'
);

CREATE TYPE payment_status AS ENUM (
    'pending',
    'success',
    'failed'
);


-- =========================================================
-- 1. FEST
-- =========================================================

CREATE TABLE fest (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR NOT NULL,
    year INTEGER NOT NULL,
    st_date TIMESTAMP NOT NULL,
    end_date TIMESTAMP NOT NULL,
    venue VARCHAR NOT NULL,
    status VARCHAR NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);


-- =========================================================
-- 2. USERS
-- =========================================================

CREATE TABLE users (
    id VARCHAR PRIMARY KEY,
    fest_id VARCHAR NOT NULL UNIQUE,
    first_name VARCHAR NOT NULL,
    last_name VARCHAR NOT NULL,
    email VARCHAR NOT NULL UNIQUE,
    verified BOOLEAN NOT NULL DEFAULT FALSE,
    phone_number VARCHAR,
    college_name VARCHAR,
    role role NOT NULL DEFAULT 'participant',
    auth_provider VARCHAR NOT NULL DEFAULT 'local',
    password VARCHAR,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);


-- =========================================================
-- 3. EVENTS
-- =========================================================

CREATE TABLE events (
    id VARCHAR PRIMARY KEY,
    name VARCHAR NOT NULL,
    club VARCHAR NOT NULL,
    is_team_event BOOLEAN NOT NULL DEFAULT FALSE,
    min_team_size INTEGER,
    max_team_size INTEGER,
    fee INTEGER,
    payment_trigger payment_trigger NOT NULL,
    payment_round INTEGER,
    registration_end_time TIMESTAMP NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);


-- =========================================================
-- 4. EVENT ROUNDS
-- =========================================================

CREATE TABLE event_rounds (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    event_id VARCHAR NOT NULL,
    round_number INTEGER NOT NULL,
    name VARCHAR,
    round_end_time TIMESTAMP NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT event_rounds_event_fk
        FOREIGN KEY (event_id)
        REFERENCES events(id),

    CONSTRAINT event_rounds_event_round_unique
        UNIQUE (event_id, round_number)
);


-- =========================================================
-- 5. EVENT STAFF ONSITE
-- =========================================================

CREATE TABLE event_staff_onsite (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    event_id VARCHAR NOT NULL,
    user_id VARCHAR NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT event_staff_onsite_event_fk
        FOREIGN KEY (event_id)
        REFERENCES events(id),

    CONSTRAINT event_staff_onsite_user_fk
        FOREIGN KEY (user_id)
        REFERENCES users(id),

    CONSTRAINT event_staff_onsite_event_user_unique
        UNIQUE (event_id, user_id)
);


-- =========================================================
-- 6. TEAMS
-- =========================================================

CREATE TABLE teams (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR NOT NULL,
    event_id VARCHAR NOT NULL,
    leader_id VARCHAR NOT NULL,
    team_code VARCHAR NOT NULL UNIQUE,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT teams_event_fk
        FOREIGN KEY (event_id)
        REFERENCES events(id),

    CONSTRAINT teams_leader_fk
        FOREIGN KEY (leader_id)
        REFERENCES users(id)
);


-- =========================================================
-- 7. TEAM MEMBERS
-- =========================================================

CREATE TABLE team_members (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    team_id INTEGER NOT NULL,
    user_id VARCHAR NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT team_members_team_fk
        FOREIGN KEY (team_id)
        REFERENCES teams(id),

    CONSTRAINT team_members_user_fk
        FOREIGN KEY (user_id)
        REFERENCES users(id),

    CONSTRAINT team_members_team_user_unique
        UNIQUE (team_id, user_id)
);


-- =========================================================
-- 8. REGISTRATIONS
-- =========================================================

CREATE TABLE registrations (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    event_id VARCHAR NOT NULL,
    user_id VARCHAR,
    team_id INTEGER,
    status registration_status NOT NULL,
    metadata JSONB,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT registrations_event_fk
        FOREIGN KEY (event_id)
        REFERENCES events(id),

    CONSTRAINT registrations_user_fk
        FOREIGN KEY (user_id)
        REFERENCES users(id),

    CONSTRAINT registrations_team_fk
        FOREIGN KEY (team_id)
        REFERENCES teams(id),

    CONSTRAINT registration_user_or_team_check
        CHECK (
            (user_id IS NOT NULL AND team_id IS NULL)
            OR
            (user_id IS NULL AND team_id IS NOT NULL)
        ),

    CONSTRAINT registrations_event_user_unique
        UNIQUE (event_id, user_id),

    CONSTRAINT registrations_event_team_unique
        UNIQUE (event_id, team_id)
);


-- =========================================================
-- 9. ROUND SELECTIONS
-- =========================================================

CREATE TABLE round_selections (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    event_round_id INTEGER NOT NULL,
    user_id VARCHAR NOT NULL,
    selected BOOLEAN NOT NULL,
    notes VARCHAR,
    decided_at TIMESTAMP,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT round_selections_round_fk
        FOREIGN KEY (event_round_id)
        REFERENCES event_rounds(id),

    CONSTRAINT round_selections_user_fk
        FOREIGN KEY (user_id)
        REFERENCES users(id),

    CONSTRAINT round_selections_round_user_unique
        UNIQUE (event_round_id, user_id)
);


-- =========================================================
-- 10. PAYMENTS
-- =========================================================

CREATE TABLE payments (
    id VARCHAR PRIMARY KEY,
    registration_id INTEGER NOT NULL,
    user_id VARCHAR NOT NULL,
    amount INTEGER NOT NULL,
    status payment_status NOT NULL,
    razorpay_order_id VARCHAR,
    razorpay_payment_id VARCHAR UNIQUE,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT payments_registration_fk
        FOREIGN KEY (registration_id)
        REFERENCES registrations(id),

    CONSTRAINT payments_user_fk
        FOREIGN KEY (user_id)
        REFERENCES users(id)
);


-- =========================================================
-- 11. VERIFICATIONS
-- =========================================================

CREATE TABLE verifications (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id VARCHAR NOT NULL,
    event_id VARCHAR,
    verified_by_user_id VARCHAR NOT NULL,
    verified_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT verifications_user_fk
        FOREIGN KEY (user_id)
        REFERENCES users(id),

    CONSTRAINT verifications_event_fk
        FOREIGN KEY (event_id)
        REFERENCES events(id),

    CONSTRAINT verifications_verified_by_fk
        FOREIGN KEY (verified_by_user_id)
        REFERENCES users(id)
);