Enum role {
  participant
  event_admin
  super
}

Enum payment_trigger {
  before_registration
  after_round
  free
}

Enum registration_status {
  registered
  in_round
  shortlisted
  eliminated
  confirmed
  cancelled
}

Enum payment_status {
  pending
  success
  failed
}


Table fest {
  id int [pk, increment]
  name varchar [not null]
  year int [not null]
  st_date timestamp [not null]
  end_date timestamp [not null]
  venue varchar [not null]
  status varchar [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}


Table users {
  id varchar [pk]
  fest_id varchar [not null, unique]
  first_name varchar [not null]
  last_name varchar [not null]
  email varchar [not null, unique]
  verified boolean [not null, default: false]
  phone_number varchar
  college_name varchar
  role role [not null, default: 'participant']
  auth_provider varchar [not null, default: 'local']
  password varchar
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}


Table events {
  id varchar [pk]
  name varchar [not null]
  club varchar [not null]
  is_team_event boolean [not null, default: false]
  min_team_size int
  max_team_size int
  fee int
  payment_trigger payment_trigger [not null]
  payment_round int
  registration_end_time timestamp [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}


Table event_rounds {
  id int [pk, increment]
  event_id varchar [not null]
  round_number int [not null]
  name varchar
  round_end_time timestamp [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (event_id, round_number) [unique]
  }
}


Table event_staff_onsite {
  id int [pk, increment]
  event_id varchar [not null]
  user_id varchar [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (event_id, user_id) [unique]
  }
}


Table teams {
  id int [pk, increment]
  name varchar [not null]
  event_id varchar [not null]
  leader_id varchar [not null]
  team_code varchar [not null, unique]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}


Table team_members {
  id int [pk, increment]
  team_id int [not null]
  user_id varchar [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (team_id, user_id) [unique]
  }
}


Table registrations {
  id int [pk, increment]
  event_id varchar [not null]
  user_id varchar
  team_id int
  status registration_status [not null]
  metadata json
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (event_id, user_id) [unique]
    (event_id, team_id) [unique]
  }
}


Table round_selections {
  id int [pk, increment]
  event_round_id int [not null]
  user_id varchar [not null]
  selected boolean [not null]
  notes varchar
  decided_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (event_round_id, user_id) [unique]
  }
}


Table payments {
  id varchar [pk]
  registration_id int [not null]
  user_id varchar [not null]
  amount int [not null]
  status payment_status [not null]
  razorpay_order_id varchar
  razorpay_payment_id varchar [unique]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}


Table verifications {
  id int [pk, increment]
  user_id varchar [not null]
  event_id varchar
  verified_by_user_id varchar [not null]
  verified_at timestamp [not null, default: `now()`]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}


Ref: event_rounds.event_id > events.id

Ref: event_staff_onsite.event_id > events.id
Ref: event_staff_onsite.user_id > users.id

Ref: teams.event_id > events.id
Ref: teams.leader_id > users.id

Ref: team_members.team_id > teams.id
Ref: team_members.user_id > users.id

Ref: registrations.event_id > events.id
Ref: registrations.user_id > users.id
Ref: registrations.team_id > teams.id

Ref: round_selections.event_round_id > event_rounds.id
Ref: round_selections.user_id > users.id

Ref: payments.registration_id > registrations.id
Ref: payments.user_id > users.id

Ref: verifications.user_id > users.id
Ref: verifications.event_id > events.id
Ref: verifications.verified_by_user_id > users.id